# jarv-cli

./: README.md  jarv.py  pyproject.toml
.claude/: settings.local.json
jarv/: __init__.py  agent.py  auditor.py  cli.py  commands.py  config.py  display.py  history.py  orchestrator.py  safety.py  setup.py  shell.py  usage.py
