[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "jarv"
version = "0.4.0"
description = "A multi-provider AI-powered CLI agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Elastic-2.0"}
authors = [{name = "James W Homer"}]
keywords = ["cli", "agent", "openai", "anthropic", "gemini", "openrouter", "llm", "assistant"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = ["litellm>=1.0", "openai>=1.0", "rich>=13.0"]

[project.urls]
Homepage = "https://github.com/JamesWHomer/jarv"
Repository = "https://github.com/JamesWHomer/jarv"
Issues = "https://github.com/JamesWHomer/jarv/issues"

[project.scripts]
jarv = "jarv.cli:main"

[tool.setuptools.packages.find]
include = ["jarv*"]
